tests/cases_invalid/generics/.expected
error: generic parameter defined multiple times
 --> ./cases_invalid/generics/struct_type_params.shd:1:31
  |
1 | struct SameParamName<T: type, T: type> {
  |                      -------  ^^^^^^^
  |                      |        |
  |                      |        duplicated generic parameter name
  |                      same generic parameter name defined here

error: invalid returned type
 --> ./cases_invalid/generics/struct_type_params.shd:6:12
  |
5 | fn invalid_return() -> MultipleParams<u32, i32> {
  |                    ---------------------------- expected type is `MultipleParams<u32, i32>`
6 |     return MultipleParams<f32, bool> { 0 };
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |            |
  |            returned type is `MultipleParams<f32, bool>`

error: invalid number of generic parameters
  --> ./cases_invalid/generics/struct_type_params.shd:9:33
   |
 9 |   const UNEXPECTED_ARGS = alignof(NoParam<u32>);
   |                                   ^^^^^^^^^^^^
   |                                   |
   |                                   1 parameter(s) specified here
...
19 | / struct NoParam {
20 | |     field: i32,
21 | | }
   | |_- 0 parameter(s) expected

error: invalid number of generic parameters
  --> ./cases_invalid/generics/struct_type_params.shd:10:31
   |
10 |   const EXPECTED_ARGS = alignof(MultipleParams);
   |                                 ^^^^^^^^^^^^^^
   |                                 |
   |                                 0 parameter(s) specified here
...
23 | / struct MultipleParams<T: type, U: type> {
24 | |     field: i32,
25 | | }
   | |_- 2 parameter(s) expected

error: invalid number of generic parameters
  --> ./cases_invalid/generics/struct_type_params.shd:11:35
   |
11 |   const INVALID_ARG_COUNT = alignof(MultipleParams<u32>);
   |                                     ^^^^^^^^^^^^^^^^^^^
   |                                     |
   |                                     1 parameter(s) specified here
...
23 | / struct MultipleParams<T: type, U: type> {
24 | |     field: i32,
25 | | }
   | |_- 2 parameter(s) expected

error: undefined item
  --> ./cases_invalid/generics/struct_type_params.shd:12:49
   |
12 | const INVALID_ARG = alignof(MultipleParams<i32, unknown>);
   |                                                 ^^^^^^^
   |                                                 |
   |                                                 `unknown` type is undefined

error: invalid expression type
  --> ./cases_invalid/generics/struct_type_params.shd:16:13
   |
16 |     value = create_with_other_params();
   |     -----   ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |       |
   |     |       expression type is `MultipleParams<f32, bool>`
   |     expected type is `MultipleParams<u32, i32>`